@@ -6,13 +6,14 @@ import com.myme.mywarehome.domains.issue.adapter.in.web.response.CreateIssuePlan
 import com.myme.mywarehome.domains.issue.adapter.in.web.response.UpdateIssuePlanResponse;
 import com.myme.mywarehome.domains.issue.application.domain.IssuePlan;
 import com.myme.mywarehome.domains.issue.application.port.in.CreateIssuePlanUseCase;
+import com.myme.mywarehome.domains.issue.application.port.in.DeleteIssuePlanUseCase;
 import com.myme.mywarehome.domains.issue.application.port.in.UpdateIssuePlanUseCase;
-import com.myme.mywarehome.domains.product.adapter.out.persistence.ProductJpaRepository;
+import com.myme.mywarehome.domains.issue.application.port.in.command.IssuePlanCommand;
 import com.myme.mywarehome.domains.product.application.domain.Product;
 import com.myme.mywarehome.domains.product.application.exception.ProductNotFoundException;
 import com.myme.mywarehome.domains.product.application.port.out.GetProductPort;
+import com.myme.mywarehome.domains.receipt.adapter.in.web.response.ReceiptPlanResponse;
 import com.myme.mywarehome.infrastructure.common.response.CommonResponse;
-import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
@@ -25,18 +26,16 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class IssuePlanController {
     private final CreateIssuePlanUseCase createIssuePlanUseCase;
-    private final ProductJpaRepository productJpaRepository;
     private final UpdateIssuePlanUseCase updateIssuePlanUseCase;
     private final GetProductPort getProductPort;
+    private final DeleteIssuePlanUseCase deleteIssuePlanUseCase;
 
     @PostMapping
     public CommonResponse<CreateIssuePlanResponse> create(@Valid @RequestBody CreateIssuePlanRequest createIssuePlanRequest) {
-        Product product = productJpaRepository.findByProductNumber(createIssuePlanRequest.productNumber())
-                .orElseThrow(ProductNotFoundException::new);
 
         return CommonResponse.from(
                 CreateIssuePlanResponse.of(
-                        createIssuePlanUseCase.create(createIssuePlanRequest.toEntity(product))  // product 전달
+                        createIssuePlanUseCase.create(createIssuePlanRequest.toCommand())
                 )
         );
     }
@@ -45,15 +44,10 @@ public class IssuePlanController {
     public CommonResponse<List<CreateIssuePlanResponse>> createBulk(
             @Valid @RequestBody List<CreateIssuePlanRequest> requests) {
 
-        List<IssuePlan> issuePlanList = requests.stream()
-                .map(request -> {
-                    Product product = productJpaRepository.findByProductNumber(request.productNumber())
-                            .orElseThrow((ProductNotFoundException::new));
-                    return request.toEntity(product);
-                })
-                .collect(Collectors.toList());
+        List<IssuePlanCommand> commandList = requests.stream()
+                .map(CreateIssuePlanRequest::toCommand).toList();
 
-        List<IssuePlan> savedPlanList = createIssuePlanUseCase.createBulk(issuePlanList);
+        List<IssuePlan> savedPlanList = createIssuePlanUseCase.createBulk(commandList);
 
         return CommonResponse.from(
                 savedPlanList.stream()
@@ -67,14 +61,18 @@ public class IssuePlanController {
             @PathVariable Long issuePlanId,
             @Valid @RequestBody UpdateIssuePlanRequest updateIssuePlanRequest) {
 
-        Product product = getProductPort.findByProductNumber(updateIssuePlanRequest.productNumber())
-                .orElseThrow((ProductNotFoundException::new));
-
         return CommonResponse.from(
-                UpdateIssuePlanResponse.of(
-                        updateIssuePlanUseCase.update(updateIssuePlanRequest.toEntity(issuePlanId, product))
-                )
+                UpdateIssuePlanResponse.of(updateIssuePlanUseCase.update(issuePlanId,
+                        updateIssuePlanRequest.toCommand()))
         );
+    }
+
+    @DeleteMapping("/{issuePlanId}")
+    public CommonResponse<Void> deleteIssuePlan(
+            @PathVariable Long issuePlanId
+    ) {
+        deleteIssuePlanUseCase.deleteIssuePlan(issuePlanId);
+        return CommonResponse.empty();
     }
 
 
